--- a/source-css/mylittledurian.css
+++ b/source-css/mylittledurian.css
@@ -128,7 +128,7 @@ Clear: none;
 Float: left;
 Width: 70px;
 Height: 70px;
-background-image: url(%%sbsquint%%) !important
+background-image: url(%%sbsquint2%%) !important
 }
 
 a[href="/hornymare"]{
