--- a/source-css/ponymotesextra.css
+++ b/source-css/ponymotesextra.css
@@ -1,6 +1,6 @@
 /* /r/ponymotesextra CSS!
  * Just animotes from /r/PonyMotes really.
- * Image Count: 38/50 - It looks like /r/ponymotesextra2 is on the horizon.
+ * Image Count: 43/50 - It looks like /r/ponymotesextra2 is on the horizon.
  */
 
 /* Animated Emotes */
@@ -43,6 +43,10 @@ a[href|="/rarhugs"] {background-image: url(%%rarhugs%%);width:300px;height:285px
 a[href|="/derpymilkshake"] {background-image: url(%%derpymilkshake%%);width:137px;height:150px;display:block;float:left;}
 a[href|="/allthescrunch"] {background-image: url(%%allthescrunch%%);width:150px;height:200px;display:block;float:left;}
 a[href|="/hypnoderp"], a[href|="/allglorytothehypnoderp"] {background-image: url(%%hypnoderp%%);width:112px;height:150px;display:block;float:left;}
+a[href|="/lyradance"] {background-image: url(%%lyradance%%);width:140px;height:175px;display:block;float:left;}
+a[href|="/poniesagainstproductivity"] {background-image: url(%%poniesagainstproductivity%%);width:300px;height:162px;display:block;float:left;}
+a[href|="/celestiabarf"] {background-image: url(%%celestiabarf%%);width:150px;height:137px;display:block;float:left;}
+a[href|="/ooooh"] {background-image: url(%%ooooh%%);width:200px;height:143px;display:block;float:left;}
 
 /*
  ************
