--- a/source-css/mlpoc.css
+++ b/source-css/mlpoc.css
@@ -287,8 +287,12 @@ body:not(.subscriber) #siteTable:before
 .side .usertext-body h4:nth-last-of-type(6) a {
    top: 250px;
 }
+.side .usertext-body h4:nth-last-of-type(7) a {
+   top: 280px;
+}
+
 .side {
-   padding-top: 180px;
+   padding-top: 210px;
 }
 /*END NEW SUBMIT BUTTONS*/
 /*ANNOUNCEMENTS*/
@@ -480,7 +484,7 @@ html:lang(he) .link:not(.linkflair-help) {
 html:lang(up) .link:not(.linkflair-update) {
     display: none    }
 
-a[href="/gcadorkable"], a[href="/gcangry"], a[href="/gcconfident"], a[href="/gcfacehoof"], a[href="/gchmm"], a[href="/gcrevelation"], a[href="/gcrock"], a[href="/gcsmug"], a[href="/gcwoo"], a[href="/gcyummy"], a[href="/mintcopy"], a[href="/minthappy"], a[href="/mintmad"], a[href="/mintsad"], a[href="/mintthink"], a[href="/nighttimesalute"], a[href="/nimblefun"], a[href="/paigehappy"], a[href="/paigeyell"], a[href="/rubybendover"], a[href="/rubyprimp"], a[href="/rubyreally"], a[href="/rubysmirk"], a[href="/sebored"], a[href="/sehahaha"], a[href="/sesly"], a[href="/sscaketopper"], a[href="/starstrucksuave"], a[href="/sugarbutt"], a[href="/sugarfree"], a[href="/sugarico"], a[href="/sugarscared"], a[href="/sugarsmarm"], a[href="/sugarsmile"], a[href="/sugarwut"], a[href="/swordbashful"], a[href="/swordbee"], a[href="/swordfacehoof"], a[href="/swordgrr"], a[href="/swordguilt"], a[href="/swordlie"], a[href="/swordmad"], a[href="/swordmirror"], a[href="/swordpride"], a[href="/swordsad"], a[href="/swordscowl"], a[href="/swordseesham"], a[href="/swordshock"], a[href="/swordshrug"], a[href="/swordspear"], a[href="/swordstare"], a[href="/swordsuave"], a[href="/sworduham"], a[href="/swordulan"], a[href="/synpoker"], a[href="/synponder"], a[href="/synsquint"], a[href="/syntaxadorkable"], a[href="/syntaxderp"], a[href="/thiskillsthegame"], a[href="/thunderdrink"]
+a[href="/gcadorkable"], a[href="/gcangry"], a[href="/gcconfident"], a[href="/gcfacehoof"], a[href="/gchmm"], a[href="/gcrevelation"], a[href="/gcrock"], a[href="/gcsmug"], a[href="/gcwoo"], a[href="/gcyummy"], a[href="/mintcopy"], a[href="/minthappy"], a[href="/mintmad"], a[href="/mintsad"], a[href="/mintthink"], a[href="/nighttimesalute"], a[href="/nimblefun"], a[href="/paigehappy"], a[href="/paigeyell"], a[href="/rubybendover"], a[href="/rubyprimp"], a[href="/rubyreally"], a[href="/rubysmirk"], a[href="/sebored"], a[href="/sehahaha"], a[href="/sesly"], a[href="/sscaketopper"], a[href="/starstrucksuave"], a[href="/sugarbutt"], a[href="/sugarfree"], a[href="/sugarico"], a[href="/sugarscared"], a[href="/sugarsmarm"], a[href="/sugarsmile"], a[href="/sugarwut"], a[href="/swordbashful"], a[href="/swordbee"], a[href="/swordfacehoof"], a[href="/swordgrr"], a[href="/swordguilt"], a[href="/swordlie"], a[href="/swordmad"], a[href="/swordmirror"], a[href="/swordpride"], a[href="/swordsad"], a[href="/swordscowl"], a[href="/swordseesham"], a[href="/swordshock"], a[href="/swordshrug"], a[href="/swordspear"], a[href="/swordstare"], a[href="/swordsuave"], a[href="/sworduham"], a[href="/swordulan"], a[href="/synpoker"], a[href="/synponder"], a[href="/synsquint"], a[href="/syntaxadorkable"], a[href="/syntaxderp"], a[href="/thiskillsthegame"], a[href="/thunderdrink"], a[href="/thunderwut"]
 {
     background-image: url(%%spritesheet%%); background-repeat: no-repeat; display: block; clear: none; float: left;
 }
@@ -1132,3 +1136,27 @@ background-color:maroon;}
 border: 2px solid orange; border-radius: 20px; 
 padding-left:8px; padding-right:8px; padding-bottom:1px; padding-top:1px;
 background-color:red;}
+
+.flair-raviolilulamoon
+{ color:#D28042; 
+border: 2px solid #D28042; border-radius: 20px; 
+padding-left:8px; padding-right:8px; padding-bottom:1px; padding-top:1px;
+background-color:#EBA77B;}
+
+.flair-raviolilulamoon
+{ color:#D28042; 
+border: 2px solid #D28042; border-radius: 20px; 
+padding-left:8px; padding-right:8px; padding-bottom:1px; padding-top:1px;
+background-color:#EBA77B;}
+
+.flair-ponylectricmachine
+{ color:grey; 
+border: 2px solid grey; border-radius: 20px; 
+padding-left:8px; padding-right:8px; padding-bottom:1px; padding-top:1px;
+background-color:#FEFEFE;}
+
+.flair-racingheart
+{ color:#753c19; 
+border: 2px solid #753c19; border-radius: 20px; 
+padding-left:8px; padding-right:8px; padding-bottom:1px; padding-top:1px;
+background-color:#ffe2ab;}
