--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -412,7 +412,7 @@ height: 800px;
  */
 
 /* 70x70a 'motes. */
-a[href|="/apathiasquint"], a[href|="/rdohyeah"], a[href|="/rainbowstache"], a[href|="/lemonglee"], a[href|="/grannyglad"], a[href|="/aloe"], a[href|="/ohyeah"], a[href|="/neutraljack"], a[href|="/fillyfirefly"], a[href|="/rdwat"], a[href|="/cocosmile"], a[href|="/cocohappy"], a[href|="/cocosad"], a[href|="/grimfluff"], a[href|="/ajduckface"], a[href|="/rarapossessed"], a[href|="/maudsmile"], a[href|="/dashsquint"], a[href|="/rastare"], a[href|="/rdfacehoof"], a[href|="/rdtwifacehoof"], a[href|="/rdtwipride"], a[href|="/rdtwismile"], a[href|="/rdtwicrazy"], a[href|="/rdtwibeam"], a[href|="/rdtwisquint"], a[href|="/rdtwistare"], a[href|="/rdtwiponder"], a[href|="/scootcontent"], a[href|="/twilightstare"], a[href|="/nursesaywhat"], a[href|="/twiworry"], a[href|="/apathiareally"], a[href|="/karmasmile"], a[href|="/discentiahurry"], a[href|="/karmacute"], a[href|="/discentiashock"], a[href|="/apathiashock"], a[href|="/karmahappy"], a[href|="/discentiaelated"], a[href|="/cadshrug"], a[href|="/fillysurprise"], a[href|="/rdbwaha"], a[href|="/lemonfire"]
+a[href|="/apathiasquint"], a[href|="/rdohyeah"], a[href|="/rainbowstache"], a[href|="/lemonglee"], a[href|="/grannyglad"], a[href|="/aloe"], a[href|="/ohyeah"], a[href|="/neutraljack"], a[href|="/fillyfirefly"], a[href|="/rdwat"], a[href|="/cocosmile"], a[href|="/cocohappy"], a[href|="/cocosad"], a[href|="/grimfluff"], a[href|="/ajduckface"], a[href|="/rarapossessed"], a[href|="/maudsmile"], a[href|="/dashsquint"], a[href|="/rastare"], a[href|="/rdfacehoof"], a[href|="/rdtwifacehoof"], a[href|="/rdtwipride"], a[href|="/rdtwismile"], a[href|="/rdtwicrazy"], a[href|="/rdtwibeam"], a[href|="/rdtwisquint"], a[href|="/rdtwistare"], a[href|="/rdtwiponder"], a[href|="/scootcontent"], a[href|="/twilightstare"], a[href|="/nursesaywhat"], a[href|="/twiworry"], a[href|="/apathiareally"], a[href|="/karmasmile"], a[href|="/discentiahurry"], a[href|="/karmacute"], a[href|="/discentiashock"], a[href|="/apathiashock"], a[href|="/karmahappy"], a[href|="/discentiaelated"], a[href|="/cadshrug"], a[href|="/fillysurprise"], a[href|="/rdbwaha"], a[href|="/lemonfire"], a[href|="/rarispikemeh"], a[href|="/rarispikenervous"], a[href|="/rarilouder"], a[href|="/rarirdannoyed"], a[href|="/rarirdcry"], a[href|="/rarirdsalute"], a[href|="/rarirdscared"], a[href|="/rarirdsitting"], a[href|="/twippseesyou"], a[href|="/twippjoy"], a[href|="/twihuhhuh"], a[href|="/twipinkieawe"], a[href|="/twipinkiepout"], a[href|="/twippfear"], a[href|="/pptwicrazy"], a[href|="/pptwisad"], a[href|="/pptwistare"], a[href|="/rarirdhappy"], a[href|="/rarirdwut"]
 {background-image:url(%%70x70a%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
@@ -420,7 +420,7 @@ a[href|="/cadface"], a[href|="/apathiablankstare"], a[href|="/twicider"], a[href
 {background-image:url(%%100x100a%%);width:100px;height:100px;display:block;float:left;}
 
 /* 100x100b 'motes */
-a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[href|="/applewat"], a[href|="/fspuppyeyes"], a[href|="/fspout"], a[href|="/scootasquee"], a[href|="/fillycoco"], a[href|="/ajrescue"], a[href|="/scaryaj"], a[href|="/pptsundere"], a[href|="/rdtsundere"], a[href|="/fsfascinating"], a[href|="/maudxrock"], a[href|="/sweetiebitch"], a[href|="/raracheeks"], a[href|="/lunapersona"], a[href|="/lunaselfcest"], a[href|="/rdscreaminginternally"], a[href|="/twijoy"], a[href|="/seapeeve"], a[href|="/loveletter"], a[href|="/twilightglare"], a[href|="/tirekunamused"], a[href|="/rarityunamused"], a[href|="/karmawat"], a[href|="/apathiaunsure"], a[href|="/apathiashrug"], a[href|="/chrome"], a[href|="/firefox"], a[href|="/derpyhasmuffin"], a[href|="/raraglee"], a[href|="/fillyderpysit"], a[href|="/suggestia"], a[href|="/rdcringe"], a[href|="/rdcantwait"], a[href|="/ddsad"], a[href|="/goodyear"]
+a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[href|="/applewat"], a[href|="/fspuppyeyes"], a[href|="/fspout"], a[href|="/scootasquee"], a[href|="/fillycoco"], a[href|="/ajrescue"], a[href|="/scaryaj"], a[href|="/pptsundere"], a[href|="/rdtsundere"], a[href|="/fsfascinating"], a[href|="/maudxrock"], a[href|="/sweetiebitch"], a[href|="/raracheeks"], a[href|="/lunapersona"], a[href|="/lunaselfcest"], a[href|="/rdscreaminginternally"], a[href|="/twijoy"], a[href|="/seapeeve"], a[href|="/loveletter"], a[href|="/twilightglare"], a[href|="/tirekunamused"], a[href|="/rarityunamused"], a[href|="/karmawat"], a[href|="/apathiaunsure"], a[href|="/apathiashrug"], a[href|="/chrome"], a[href|="/firefox"], a[href|="/derpyhasmuffin"], a[href|="/raraglee"], a[href|="/fillyderpysit"], a[href|="/suggestia"], a[href|="/rdcringe"], a[href|="/rdcantwait"], a[href|="/ddsad"], a[href|="/goodyear"], a[href|="/mlady"], a[href|="/blushingluna"]
 {background-image:url(%%100x100b%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
@@ -436,7 +436,7 @@ a[href|="/imnotsayingitwaschaos"], a[href|="/uwotdahling"], a[href|="/proletaria
 {background-image:url(%%150x150c%%);width:150px;height:150px;display:block;float:left;}
 
 /* 150x150d 'motes */
-a[href|="/poliwag"], a[href|="/venonat"], a[href|="/pikachu"], a[href|="/ghastly"], a[href|="/ninetales"], a[href|="/venasaur"], a[href|="/applebloom"], a[href|="/sweetiebloom"], a[href|="/celestiaiswatching"], a[href|="/comehugmebro"], a[href|="/hugmebro"]
+a[href|="/poliwag"], a[href|="/venonat"], a[href|="/pikachu"], a[href|="/ghastly"], a[href|="/ninetales"], a[href|="/venasaur"], a[href|="/applebloom"], a[href|="/sweetiebloom"], a[href|="/celestiaiswatching"], a[href|="/comehugmebro"], a[href|="/hugmebro"], a[href|="/flufflepirate"]
 {background-image:url(%%150x150d%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
@@ -529,7 +529,7 @@ a[href|="/whatatwist"],  a[href|="/hnng"], a[href|="/smugcolgate"], a[href|="/rd
 {background-position: 0% -300%;}
 
 /* Grid pos 1,3 'motes */
-a[href|="/rdsquishyface"], a[href|="/soveryawesome"], a[href|="/trixielecture"], a[href|="/cocosmile"], a[href|="/nerdderpy"], a[href|="/lunanurse"], a[href|="/maudxrock"], a[href|="/thisisbait"]
+a[href|="/rdsquishyface"], a[href|="/soveryawesome"], a[href|="/trixielecture"], a[href|="/cocosmile"], a[href|="/nerdderpy"], a[href|="/lunanurse"], a[href|="/maudxrock"], a[href|="/thisisbait"], a[href|="/flufflepirate"]
 {background-position: -100% -300%;}
 
 /* Grid pos 2,3 'motes */
@@ -629,11 +629,11 @@ a[href|="/karmacute"], a[href|="/goodyear"]
 {background-position: -100% -1100%;}
 
 /* Grid pos 2,11 'motes */
-a[href|="/discentiashock"]
+a[href|="/discentiashock"], a[href|="/mlady"]
 {background-position: -200% -1100%;}
 
 /* Grid pos 0,12 'motes */
-a[href|="/apathiashock"]
+a[href|="/apathiashock"], a[href|="/blushingluna"]
 {background-position: 0 -1200%;}
 
 /* Grid pos 1,12 'motes */
@@ -659,6 +659,82 @@ a[href|="/rdbwaha"]
 /* Grid pos 0,14 'motes */
 a[href|="/lemonfire"]
 {background-position: 0 -1400%;}
+
+/* Grid pos 1,14 'motes */
+a[href|="/rarispikemeh"]
+{background-position: -100% -1400%;}
+
+/* Grid pos 2,14 'motes */
+a[href|="/rarispikenervous"]
+{background-position: -200% -1400%;}
+
+/* Grid pos 0,15 'motes */
+a[href|="/rarilouder"]
+{background-position: 0 -1500%;}
+
+/* Grid pos 1,15 'motes */
+a[href|="/rarirdannoyed"]
+{background-position: -100% -1500%;}
+
+/* Grid pos 2,15 'motes */
+a[href|="/rarirdcry"]
+{background-position: -200% -1500%;}
+
+/* Grid pos 0,16 'motes */
+a[href|="/rarirdsalute"]
+{background-position: 0 -1600%;}
+
+/* Grid pos 1,16 'motes */
+a[href|="/rarirdscared"]
+{background-position: -100% -1600%;}
+
+/* Grid pos 2,16 'motes */
+a[href|="/rarirdsitting"]
+{background-position: -200% -1600%;}
+
+/* Grid pos 0,17 'motes */
+a[href|="/twippseesyou"]
+{background-position: 0 -1700%;}
+
+/* Grid pos 1,17 'motes */
+a[href|="/twippjoy"]
+{background-position: -100% -1700%;}
+
+/* Grid pos 2,17 'motes */
+a[href|="/twihuhhuh"]
+{background-position: -200% -1700%;}
+
+/* Grid pos 0,18 'motes */
+a[href|="/twipinkieawe"]
+{background-position: 0 -1800%;}
+
+/* Grid pos 1,18 'motes */
+a[href|="/twipinkiepout"]
+{background-position: -100% -1800%;}
+
+/* Grid pos 2,18 'motes */
+a[href|="/twippfear"]
+{background-position: -200% -1800%;}
+
+/* Grid pos 0,19 'motes */
+a[href|="/pptwicrazy"]
+{background-position: 0 -1900%;}
+
+/* Grid pos 1,19 'motes */
+a[href|="/pptwisad"]
+{background-position: -100% -1900%;}
+
+/* Grid pos 2,19 'motes */
+a[href|="/pptwistare"]
+{background-position: -200% -1900%;}
+
+/* Grid pos 0,20 'motes */
+a[href|="/rarirdhappy"]
+{background-position: 0 -2000%;}
+
+/* Grid pos 1,20 'motes */
+a[href|="/rarirdwut"]
+{background-position: -100% -2000%;}
 
 /* Text Emotes */
 a[href|="/gravestone"] em, a[href|="/theydied"] em
