--- a/source-css/cadance.css
+++ b/source-css/cadance.css
@@ -444,3 +444,6 @@ a[href|="/cadcheer"] {
     background-image: url(%%Pi5dykx%%)
 
 }
+a.author[href$="DaylightDarkle"]{font-size:0px!important;}
+a.author[href$="DaylightDarkle"]:after{content:"Princess Cadance";font-size:10px!important;}
+.sidecontentbox .author[href$="DaylightDarkle"]:after{font-size:12px!important;}
