--- a/source-css/clopmotes.css
+++ b/source-css/clopmotes.css
@@ -302,11 +302,11 @@ a[href|="/shykisscock"]
 {background-image:url(%%150x150a%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
-a[href|="/cheesesocks"], a[href|="/festivebuttplug"], a[href|="/wetqueen"], a[href|="/doublemoon"], a[href|="/wetmoons"], a[href|="/kissmyass"], a[href|="/tiapresenting"], a[href|="/creammuffin"], a[href|="/sexygaming"]
+a[href|="/cheesesocks"], a[href|="/festivebuttplug"], a[href|="/wetqueen"], a[href|="/doublemoon"], a[href|="/wetmoons"], a[href|="/kissmyass"], a[href|="/tiapresenting"], a[href|="/creammuffin"], a[href|="/sexygaming"], a[href|="/pm"]
 {background-image:url(%%200x200a%%);width:200px;height:200px;display:block;float:left;}
 
 /* 250x250a 'motes. */
-a[href|="/plotpair"]
+a[href|="/plotpair"], a[href|="/lickusclean"]
 {background-image:url(%%250x250a%%);width:250px;height:250px;display:block;float:left;}
 
 /* 300x300a 'motes */
@@ -318,7 +318,7 @@ a[href|="/examplecode1"], a[href|="/examplecode2"], a[href|="/shykisscock"],a[hr
 {background-position: 0 0;}
 
 /* Grid pos 1,0 'motes */
-a[href|="/festivebuttplug"]
+a[href|="/festivebuttplug"], a[href|="/lickusclean"]
 {background-position: -100% 0%;}
 
 /* Grid pos 2,0 'motes */
@@ -349,12 +349,16 @@ a[href|="/creammuffin"]
 a[href|="/sexygaming"]
 {background-position: -200% -200%;}
 
+/* Grid pos 0,3 'motes */
+a[href|="/pm"]
+{background-position: 0% -300%;}
+
 /* Misfits a */
 a[href|="/trixiepresents"], a[href|="/queenpresents"], a[href|="/itschristmas"], a[href|="/queennurse"], a[href|="/cherry"], a[href|="/fullmoon"], a[href|="/pinkiepresents"], a[href|="/bbinsocks"]
 {background-image:url(%%misfitsa%%);display:block;float:left;}
 
 /* Misfits b */
-a[href|="/nmmbj"], a[href|="/nmmbent"], a[href|="/applesocks"]
+a[href|="/nmmbj"], a[href|="/nmmbent"], a[href|="/applesocks"], a[href|="/sunandmoon"], a[href|="/royalflush"], a[href|="/maidmolly"], a[href|="/more"]
 {background-image:url(%%misfitsb%%);display:block;float:left;}
 
 /* Animated Emotes */
@@ -373,3 +377,7 @@ a[href|="/bbinsocks"] {width: 225px;height:174px;background-position: -170px -70
 a[href|="/nmmbj"] {width: 225px;height:193px;}
 a[href|="/nmmbent"] {width: 182px;height:225px;background-position: -225px 0px;}
 a[href|="/applesocks"] {width: 144px;height:225px;background-position: 0px -193px;}
+a[href|="/sunandmoon"] {width: 200px;height:250px;background-position: -144px -225px;}
+a[href|="/royalflush"] {width: 250px;height:175px;background-position: 0px -475px;}
+a[href|="/maidmolly"] {width: 188px;height:250px;background-position: -250px -475px;}
+a[href|="/more"] {width: 227px;height:250px;background-position: 0px -650px;}
