--- a/source-css/mlpoc.css
+++ b/source-css/mlpoc.css
@@ -1132,8 +1132,8 @@ padding-left:8px; padding-right:8px; padding-bottom:1px; padding-top:1px;
 background-color:maroon;}
 
 .flair-frostfire
-{ color:aqua; 
-border: 2px solid orange; border-radius: 20px; 
+{ color:white; 
+border: 2px solid aqua; border-radius: 20px; 
 padding-left:8px; padding-right:8px; padding-bottom:1px; padding-top:1px;
 background-color:red;}
 
@@ -1160,3 +1160,9 @@ background-color:#FEFEFE;}
 border: 2px solid #753c19; border-radius: 20px; 
 padding-left:8px; padding-right:8px; padding-bottom:1px; padding-top:1px;
 background-color:#ffe2ab;}
+
+.flair-aerohead
+{ color:#ff2222; 
+border: 2px solid #ff2222; border-radius: 20px; 
+padding-left:8px; padding-right:8px; padding-bottom:1px; padding-top:1px;
+background-color:#brown;}
