--- a/source-css/sunsetshimmer.css
+++ b/source-css/sunsetshimmer.css
@@ -154,6 +154,7 @@ body {
 }
 
 .arrow.down { background-image: url(%%Twilights-Crown-Gray%%);
+  background-position: 0px 0px;
   height: 20px; width: 15px; 
   visibility: hidden; display: none
 }
@@ -166,6 +167,7 @@ body {
 
 .arrow.downmod { 
   background-image: url(%%Twilights-Crown%%);
+  background-position: 0px 0px;
   height: 16px; width: 15px;  
 }
 
