--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -420,7 +420,7 @@ a[href|="/cadface"], a[href|="/apathiablankstare"], a[href|="/twicider"], a[href
 {background-image:url(%%100x100a%%);width:100px;height:100px;display:block;float:left;}
 
 /* 100x100b 'motes */
-a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[href|="/applewat"], a[href|="/fspuppyeyes"], a[href|="/fspout"], a[href|="/scootasquee"], a[href|="/fillycoco"], a[href|="/ajrescue"], a[href|="/scaryaj"], a[href|="/pptsundere"], a[href|="/rdtsundere"], a[href|="/fsfascinating"], a[href|="/maudxrock"], a[href|="/sweetiebitch"], a[href|="/raracheeks"], a[href|="/lunapersona"], a[href|="/lunaselfcest"], a[href|="/rdscreaminginternally"], a[href|="/twijoy"], a[href|="/seapeeve"], a[href|="/loveletter"], a[href|="/twilightglare"], a[href|="/tirekunamused"], a[href|="/rarityunamused"], a[href|="/karmawat"], a[href|="/apathiaunsure"], a[href|="/apathiashrug"], a[href|="/chrome"], a[href|="/firefox"], a[href|="/derpyhasmuffin"], a[href|="/raraglee"], a[href|="/fillyderpysit"], a[href|="/suggestia"], a[href|="/rdcringe"], a[href|="/rdcantwait"], a[href|="/ddsad"], a[href|="/goodyear"], a[href|="/mlady"], a[href|="/blushingluna"]
+a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[href|="/applewat"], a[href|="/fspuppyeyes"], a[href|="/fspout"], a[href|="/scootasquee"], a[href|="/fillycoco"], a[href|="/ajrescue"], a[href|="/scaryaj"], a[href|="/pptsundere"], a[href|="/rdtsundere"], a[href|="/fsfascinating"], a[href|="/maudxrock"], a[href|="/sweetiebitch"], a[href|="/raracheeks"], a[href|="/lunapersona"], a[href|="/lunaselfcest"], a[href|="/rdscreaminginternally"], a[href|="/twijoy"], a[href|="/seapeeve"], a[href|="/loveletter"], a[href|="/twilightglare"], a[href|="/tirekunamused"], a[href|="/rarityunamused"], a[href|="/karmawat"], a[href|="/apathiaunsure"], a[href|="/apathiashrug"], a[href|="/chrome"], a[href|="/firefox"], a[href|="/derpyhasmuffin"], a[href|="/raraglee"], a[href|="/fillyderpysit"], a[href|="/suggestia"], a[href|="/rdcringe"], a[href|="/rdcantwait"], a[href|="/ddsad"], a[href|="/goodyear"], a[href|="/mlady"], a[href|="/blushingluna"], a[href|="/scootles"], a[href|="/raritylipbite"]
 {background-image:url(%%100x100b%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
@@ -436,7 +436,7 @@ a[href|="/imnotsayingitwaschaos"], a[href|="/uwotdahling"], a[href|="/proletaria
 {background-image:url(%%150x150c%%);width:150px;height:150px;display:block;float:left;}
 
 /* 150x150d 'motes */
-a[href|="/poliwag"], a[href|="/venonat"], a[href|="/pikachu"], a[href|="/ghastly"], a[href|="/ninetales"], a[href|="/venasaur"], a[href|="/applebloom"], a[href|="/sweetiebloom"], a[href|="/celestiaiswatching"], a[href|="/comehugmebro"], a[href|="/hugmebro"], a[href|="/flufflepirate"]
+a[href|="/poliwag"], a[href|="/venonat"], a[href|="/pikachu"], a[href|="/ghastly"], a[href|="/ninetales"], a[href|="/venasaur"], a[href|="/applebloom"], a[href|="/sweetiebloom"], a[href|="/celestiaiswatching"], a[href|="/comehugmebro"], a[href|="/hugmebro"], a[href|="/flufflepirate"], a[href|="/shittypone"]
 {background-image:url(%%150x150d%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
@@ -485,8 +485,12 @@ a[href|="/kawaiidash"], a[href|="/cadmad"], a[href|="/cadbrow"], a[href|="/spitf
 {background-image:url(%%misfitsg%%);display:block;float:left;}
 
 /* Misfits h */
-a[href|="/slowbro"], a[href|="/oddish"], a[href|="/mankey"], a[href|="/applelaugh"], a[href|="/thrackerpoint"], a[href|="/soyouhaveponyaids"], a[href|="/notenoughrarity"], a[href|="/notenoughgems"], a[href|="/notenoughshy"], a[href|="/notenoughflutter"], a[href|="/notenoughflutters"], a[href|="/dashcon"], a[href|="/illumineighti"], a[href|="/twibunny"], a[href|="/cadheart"], a[href|="/piracybloom"], a[href|="/surprisedzecora"], a[href|="/spitheart"], a[href|="/notenoughparties"], a[href|="/notenoughpie"], a[href|="/notenoughpinkie"], a[href|="/thrackerpoint"], a[href|="/thrackerstare"], a[href|="/soyouarereplacingus"], a[href|="/soyourereplacingus"], a[href|="/sweetiescare"], a[href|="/sbstalksthread"], a[href|="/sbstalkthread"]
+a[href|="/slowbro"], a[href|="/oddish"], a[href|="/mankey"], a[href|="/applelaugh"], a[href|="/thrackerpoint"], a[href|="/soyouhaveponyaids"], a[href|="/notenoughrarity"], a[href|="/notenoughgems"], a[href|="/notenoughshy"], a[href|="/notenoughflutter"], a[href|="/notenoughflutters"], a[href|="/dashcon"], a[href|="/illumineighti"], a[href|="/twibunny"], a[href|="/cadheart"], a[href|="/piracybloom"], a[href|="/surprisedzecora"], a[href|="/spitheart"], a[href|="/notenoughparties"], a[href|="/notenoughpie"], a[href|="/notenoughpinkie"], a[href|="/thrackerpoint"], a[href|="/thrackerstare"], a[href|="/soyouarereplacingus"], a[href|="/soyourereplacingus"], a[href|="/sweetiescare"], a[href|="/sbstalksthread"], a[href|="/sbstalkthread"], a[href|="/spitfirebellyrubs"], a[href|="/sombrayes"]
 {background-image:url(%%misfitsh%%);display:block;float:left;}
+
+/* Misfits i */
+a[href|="/thespittening"]
+{background-image:url(%%misfitsi%%);display:block;float:left;}
 
 /* Grid pos 0,0 'motes. Not needed but for completeness... */
 a[href|="/cadface"], a[href|="/pinkieplease"], a[href|="/regret"], a[href|="/apathiasquint"], a[href|="/tuxpony"], a[href|="/karmashark"], a[href|="/jumptheshark"], a[href|="/flutterbatscowl"], a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/imnotsayingitwaschaos"], a[href|="/rariluna"], a[href|="/poliwag"]
@@ -533,7 +537,7 @@ a[href|="/rdsquishyface"], a[href|="/soveryawesome"], a[href|="/trixielecture"],
 {background-position: -100% -300%;}
 
 /* Grid pos 2,3 'motes */
-a[href|="/rdsmirk"], a[href|="/cheekydash"], a[href|="/ajdur"], a[href|="/cocohappy"], a[href|="/nerdaj"], a[href|="/50sderpy"], a[href|="/sweetiebitch"], a[href|="/derpydress"]
+a[href|="/rdsmirk"], a[href|="/cheekydash"], a[href|="/ajdur"], a[href|="/cocohappy"], a[href|="/nerdaj"], a[href|="/50sderpy"], a[href|="/sweetiebitch"], a[href|="/derpydress"], a[href|="/shittypone"]
 {background-position: -200% -300%;}
 
 /* Grid pos 0,4 'motes */
@@ -637,11 +641,11 @@ a[href|="/apathiashock"], a[href|="/blushingluna"]
 {background-position: 0 -1200%;}
 
 /* Grid pos 1,12 'motes */
-a[href|="/karmahappy"]
+a[href|="/karmahappy"], a[href|="/scootles"]
 {background-position: -100% -1200%;}
 
 /* Grid pos 2,12 'motes */
-a[href|="/discentiaelated"]
+a[href|="/discentiaelated"], a[href|="/raritylipbite"]
 {background-position: -200% -1200%;}
 
 /* Grid pos 0,13 'motes */
@@ -768,7 +772,7 @@ a[href|="/pinkieperplexity"] {width:76px;height:150px;background-position: -100p
 a[href|="/surpriseperplexity"] {width:75px;height:150px;background-position: -200px -155px;}
 a[href|="/derpyperplexity"] {width:71px;height:150px;background-position: -300px -155px;}
 a[href|="/vinylperplexity"] {width:85px;height:150px;background-position: 0 -310px;}
-a[href|="/scootperplexity"] {width:70px;height:109px;background-position: -100px -352px;}
+a[href|="/scootperplexity"] {width:70px;height:109px;background-position: -100px -351px;}
 a[href|="/applebloomperplexity"] {width:70px;height:121px;background-position: -200px -339px;}
 a[href|="/sweetieperplexity"] {width:70px;height:116px;background-position: -300px -344px;}
 
@@ -1021,3 +1025,6 @@ a[href|="/notenoughparties"], a[href|="/notenoughpie"], a[href|="/notenoughpinki
 a[href|="/thrackerstare"], a[href|="/soyouarereplacingus"], a[href|="/soyourereplacingus"] {width:100px;height:193px;background-position: -250px -400px;}
 a[href|="/sweetiescare"] {width:127px;height:100px;background-position: 0 -592px;}
 a[href|="/sbstalksthread"], a[href|="/sbstalkthread"] {width:94px;height:150px;background-position: -350px -450px;}
+a[href|="/spitfirebellyrubs"] {width:300px;height:148px;background-position: -127px -600px;}
+a[href|="/sombrayes"] {width:153px;height:200px;background-position: -547px -400px;}
+a[href|="/thespittening"] {width:200px;height:156px;}
